# workshop-etl2

./: README.md  app.py  diferentes_arquivos.py  pipeline_00.py  pipeline_02.py  pyproject.toml
